Add css styling to hide results section.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,25 @@
 
+
 .container {
   background-color: lightblue;
 }
+
+.liLook {
+  font-weight: bold;
+  font-size: 20px;
+}
+
+/*.results li {
+  display: none;
+}*/
+
+/*.results p {
+  display: none;
+}
+
+.results ul {
+  list-style-type: none;
+}*/
 
 h1 {
   padding-bottom: 10px;
