--- a/css/styles.css
+++ b/css/styles.css
@@ -19,21 +19,21 @@
   font-size: 20px;
 }
 
-/*.results h3 {
+.results h3 {
   display: none;
-}*/
+}
 
-/*.results li {
+.results li {
   display: none;
-}*/
+}
 
-/*.results p {
+.results p {
   display: none;
 }
 
 .results ul {
   list-style-type: none;
-}*/
+}
 
 h1 {
   padding-bottom: 10px;
