--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,8 @@
 
 .container {
   background-color: lightblue;
+  padding-top: 50px;
+  padding-bottom: 100px;
 }
 
 .intro {
@@ -19,6 +21,8 @@
 .question {
   padding-top: 20px;
 }
+
+
 
 li {
   display: none;
